--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,22 @@
     // Użyj funkcji IntelliSense, aby uzyskać informacje o możliwych atrybutach.
     // Najedź kursorem, aby wyświetlić opisy istniejących atrybutów.
     // Aby uzyskać więcej informacji, odwiedź stronę: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Uruchom przeglądarkę Chrome względem hosta lokalnego",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
-    ]
-}
+    
+        "version": "0.2.0",
+        "configurations": [
+            {
+                "type": "node",
+                "request": "launch",
+                "name": "Debug Application",
+                "program": "${workspaceFolder}/app.js",
+                "skipFiles": [
+                    "<node_internals>/**"
+                ],
+                "outFiles": [
+                    "${workspaceFolder}/dist/**/*.js"
+                ],
+                "sourceMaps": true
+            }
+        ]
+    }
+    
